garbage collector summary